# rag-benchmark

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
config/prompts/: agent_react.txt  basic_qa.txt  corrective_eval.txt  hyde_generate.txt  multiquery_expand.txt  selfquery_parse.txt  system.txt  tree_navigate_nodes.txt  tree_select_articles.txt
data/processed/: dev_questions.json  test_questions.json
docs/: index.html
evaluation/: logger.py  metrics.py  run_eval.py
rag_patterns/: __init__.py  agentic_rag.py  base_retriever.py  basic_rag.py  chunking.py  corrective_rag.py  graph_rag.py  hybrid_rag.py  hyde_rag.py  indexing.py  llm_client.py  multiquery_rag.py  oracle_rag.py  parent_child_rag.py  reranking_rag.py  self_query_rag.py  tree_rag.py  zero_retrieval.py
report/: blog_draft.md  report.md
results/: dashboard.html
results/aggregated/: comparison.csv  statistical_analysis.csv  statistical_analysis.md
scripts/: aggregate_results.py  build_indexes.py  generate_charts.py  prepare_dataset.py  run_all.sh  run_ragas.py  run_tree_rag.sh  statistical_analysis.py  update_after_ragas.sh  verify_setup.py
